--- a/Dockerfiles/node/nodeapp/public/machine.css
+++ b/Dockerfiles/node/nodeapp/public/machine.css
@@ -1,13 +1,14 @@
 
 #machineBox{
-  top: 12rem;
+  /* top: 12rem; */
   border: 2px solid transparent;
-  width: 1100px;
-  height: 500px;
-  background-color: rgba(0,0,0,0.6) ;
+  width: 60%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.6);
   margin: auto;
   position: relative;
   border-radius: 5rem;
+  float: left;
 }
 
 .area{
@@ -16,8 +17,8 @@
   margin-left: auto;
   margin-right: auto;
   float: left;
-  width: 200px;
-  height: 300px;
+  width: 20%;
+  height: 100%;
   background-color: rgba(255,255,255,0.8);
 }
 
@@ -30,12 +31,13 @@
 }
 
 #conveyor{
-  margin-top: 0.5rem;
+  /* margin-top: 0.5rem; */
+  float: left;
   border-radius: 1rem;
   background-color: #333;
-  width: 1000px;
+  width: 92%;
   height: 35px;
-  margin-left: 50px;
+  margin-left: 4%;
   border-style: dashed;
   border-color: white;
   border-width: 0.3rem;
@@ -43,16 +45,18 @@
 }
 
 #pillarBox{
-  width: 1000px;
-  height: 70px;
-  margin-left: 50px;
+  width: 90%;
+  height: 100%;
+  margin-left: 5%;
+  float: left;
 }
 
 #areasBox{
   margin: auto;
   margin-top: 3rem;
-  width: 1000px;
-  height: 300px;
+  margin-left: 5%;
+  width: 90%;
+  height: 60%;
   border-radius: 1rem;
 }
 
@@ -72,24 +76,25 @@
 
 .pillar{
   background-color: #333;
-  width: 13px;
+  width: 2%;
   height: 100px;
   float: left;
-  margin-left: 166px;
+  margin-left: 16.67%;
   border-bottom: 5px solid black;
   background-color: rgba(0,0,0,0.8);
   background-color: rgba(7, 118, 141, 0.7);
   background-color: rgba(17, 120, 149, 0.9);
   border-left: 1px solid black;
   border-right: 1px solid black;
+  margin-bottom: 2.5%;
 }
 
 .pillarLeft{
-  margin-left: 40px;
+  margin-left: 2%;
 }
 
 .pillarRight{
-  margin-right: 40px;
+  margin-right: 2%;
 }
 
 .iconContainer{
@@ -100,38 +105,46 @@
 
 .iconArea{
   margin-left: 1rem;
-  width: 80%;
+  margin-top: 3%;
+  width: 90%;
 }
 
 .block{
-  width: 20px;
-  height: 20px;
+  width: 10%;
+  height: 2rem;
   background-color: #333333;
   float: left;
   border-radius: 5px;
   border-color: black;
   border-style: double;
-  border-width: 10px;
+  /* border-width: 10px; */
+  /* margin-left: 2.5%; */
 }
 
 .line{
-  width: 120px;
-  height: 6px;
-  margin-top: 7px;
+  width: 70%;
+  height: 0.5rem;
+  margin-top: 0.75rem;
   float: left;
   background-color: #f93030;
 }
 
 .lightBarrier{
-  margin-left: 20px;
-  margin-top: 20rem;
+  margin-left: 10%;
+  margin-top: 125%;
+  margin-bottom: 10%;
+  /* height: 10%; */
+  width: 90%;
+  float: left;
 }
 
 .product{
   position: absolute;
-  width: 100px;
-  height: 100px;
-  margin-left: 50px;
-  margin-top: 7rem;
+  width: 10%;
+  height: 15%;
+  margin-left: 4%;
+  margin-top: 7%;
   visibility: hidden;
+  float: left;
+  /* margin-bottom: -29rem; */
 }
